# BugfixedHL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MakeClientRelease.bat  README.md  appveyor.yml  multiplayer.sln
Debug/: tier1.lib
bugfixedapi/: CBugfixedServer.cpp  CBugfixedServer.h  CMakeLists.txt  IBugfixedServer.h
bugfixedapi_amxx/: CMakeLists.txt  bhl_api.cpp  bhl_api.h  bugfixedapi.inc  bugfixedapi_amxx.cpp  moduleconfig.h
cl_dll/: CGameInfo.cpp  CGameInfo.h  CHud.cpp  CHudAmmo.cpp  CHudAmmo.h  CHudAmmoSecondary.cpp  CHudAmmoSecondary.h  CHudBase.cpp  CHudBase.h  CHudBattery.cpp  CHudBattery.h  CHudCrosshair.cpp  CHudCrosshair.h  CHudDeathNotice.cpp  CHudDeathNotice.h  CHudFlashlight.cpp  CHudFlashlight.h  CHudGeiger.cpp  CHudGeiger.h  CHudHealth.cpp  CHudHealth.h  CHudMenu.cpp  CHudMenu.h  CHudMessage.cpp  CHudMessage.h  CHudSayText.cpp  CHudSayText.h  CHudScoreBoard.cpp  CHudScoreBoard.h  CHudScores.cpp  CHudScores.h  CHudSpectator.cpp  CHudSpectator.h  CHudSpeedometer.cpp  CHudSpeedometer.h  CHudStatusBar.cpp  CHudStatusBar.h  CHudStatusIcons.cpp  CHudStatusIcons.h  CHudTextMessage.cpp  (+84 more)
cl_dll/dinput/: CMakeLists.txt
cl_dll/hl/: CMakeLists.txt  hl_weapons.cpp
cl_dll/jpeg/: CMakeLists.txt
cl_dll/lodepng/: CMakeLists.txt
cl_dll/msvc/: PreBuild.bat  client.vcxproj  client.vcxproj.filters
cl_dll/vgui2/: CAvatarImage.cpp  CAvatarImage.h  CBackGroundPanel.cpp  CBaseHudChat.cpp  CBaseHudChat.h  CBaseViewport.cpp  CBaseViewport.h  CClientMOTD.cpp  CClientMOTD.h  CClientVGUI.cpp  CClientVGUI.h  CGameUITestPanel.cpp  CHudChat.cpp  CHudChat.h  CHudScoreBoard.cpp  CHudScoreBoard.h  CHudTextVgui.cpp  CHudTextVgui.h  CHudViewport.cpp  CHudViewport.h  CMakeLists.txt  CPlayerListPanel.cpp  CPlayerListPanel.h  CPngImage.cpp  CPngImage.h  CScorePanel.cpp  CScorePanel.h  CUpdateNotificationDialog.cpp  CUpdaterDebugDialog.h  CVoiceStatus2.cpp  GameUIPanelNames.h  IEngineVgui.h  IViewportPanel.h  KeyValuesCompat.cpp  VGUI2Paths.h  ViewportPanelNames.h
cl_dll/vgui2/gameui/: CChangeLogDialog.cpp  CChangelogDialog.h  CGameUITestPanel.cpp  CGameUITestPanel.h  CGameUIViewport.cpp  CGameUIViewport.h  CMakeLists.txt  CUpdateNotificationDialog.cpp  CUpdateNotificationDialog.h  CUpdaterDebugDialog.cpp  CUpdaterDebugDialog.h  GameUIPanelNames.h  IGameUIPanel.h
cl_dll/vgui2/gameui/options/: CAboutSubOptions.cpp  CAboutSubOptions.h  CAdvOptionsDialog.cpp  CAdvOptionsDialog.h  CChatSubOptions.cpp  CColorPicker.cpp  CColorPicker.h  CCrosshairSubOptions.cpp  CCrosshairSubOptions.h  CCvarCheckButton.cpp  CCvarColor.cpp  CCvarSlider.cpp  CCvarTextEntry.cpp  CGeneralSubOptions.cpp  CHudSubOptions.cpp  CHudSubOptions.h  CMakeLists.txt  CScoreboardSubOptions.cpp
cl_dll/vgui2/gameui/options/colorpicker/: CMakeLists.txt  CPickerPanel.cpp  CSelCirclePanel.cpp  CTextureManager.cpp  CTextureManager.h
cl_dll/vgui2/options/: CAdvOptionsDialog.cpp  CChatSubOptions.cpp  CColorPicker.cpp  CCrosshairSubOptions.cpp  CCrosshairSubOptions.h  CCvarColor.cpp  CCvarColor.h  CHudSubOptions.cpp  CHudSubOptions.h  CMakeLists.txt
cl_dll/vgui2/options/colorpicker/: CBarPanel.cpp  CSelCirclePanel.cpp  CTextureManager.cpp
cmake/: FindDInput.cmake  FindDXGUID.cmake  FindSDL2.cmake  FindSteamAPI.cmake  Findtier0.cmake  Findvgui.cmake  Findvstdlib.cmake
common/: CMakeLists.txt  MinMax.h  cvardef.h  entity_state.h  (+2 more)
dlls/: CBugfixedServer.cpp  CBugfixedServer.h  CMakeLists.txt  appversion.sh  basemonster.h  cbase.cpp  cbase.h  client.cpp  client.h  com_utils.cpp  com_utils.h  combat.cpp  convar.cpp  convar.h  enginecallback.h  extdll.h  game.cpp  game.h  gamerules.cpp  gamerules.h  gauss.cpp  globals.cpp  h_export.cpp  hassassin.cpp  hl.def  hl.rc  hornet.cpp  items.cpp  memory.h  memory_linux.cpp  memory_win32.cpp  monsters.cpp  mp5.cpp  multiplay_gamerules.cpp  nihilanth.cpp  player.cpp  player.h  resource.h  rpg.cpp  skill.h  (+6 more)
dlls/msvc/: hl.vcxproj
dlls/multimode/: CMakeLists.txt  basemode.cpp  basemode.h  biohazard_mode.cpp  biohazard_mode.h  boss_mode.cpp  boss_mode.h  config_var.cpp  config_var.h  dm_mode.cpp  dm_mode.h  multimode.h  multimode_gamerules.cpp  multimode_gamerules.h  oneshot_mode.cpp  oneshot_mode.h  recoil_mode.cpp  recoil_mode.h  slowrockets_mode.cpp  slowrockets_mode.h  speed_mode.cpp  speed_mode.h  warmup_mode.cpp  warmup_mode.h  wpn_drop_mode.cpp  wpn_drop_mode.h
dlls/multimode/modes/: biohazard_mode.cpp  biohazard_mode.h  boss_mode.cpp  boss_mode.h  demolition_mode.cpp  demolition_mode.h  dm_mode.cpp  dm_mode.h  oneshot_mode.cpp  oneshot_mode.h  recoil_mode.cpp  recoil_mode.h  slowrockets_mode.cpp  slowrockets_mode.h  speed_mode.cpp  speed_mode.h  warmup_mode.cpp  warmup_mode.h  wpn_drop_mode.cpp  wpn_drop_mode.h
dlls/pcre/: CMakeLists.txt
dlls/wpn_shared/: CMakeLists.txt
source_sdk/tier1/: CMakeLists.txt  CharacterSet.cpp  ConVar.cpp  KeyValues.cpp  MemPool.cpp  MemStack.cpp  UtlBuffer.cpp  UtlSymbol.cpp  bitbuf.cpp  byteswap.cpp  checksum_md5.cpp  generichash.cpp  netadr.cpp  strtools.cpp  tier1.vcxproj  tier1.vcxproj.filters
source_sdk/tier1/Debug/: tier1.idb  tier1.lib
source_sdk/tier1/Debug/tier1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  tier1.lastbuildstate
source_sdk/vgui2/controls/: AnimationController.cpp  BitmapImagePanel.cpp  BuildGroup.cpp  BuildModeDialog.cpp  Button.cpp  CMakeLists.txt  ComboBox.cpp  Controls.cpp  FileOpenDialog.cpp  Frame.cpp  HTML.cpp  ImagePanel.cpp  KeyBindingHelpDialog.cpp  KeyBoardEditorDialog.cpp  Label.cpp  ListPanel.cpp  Menu.cpp  MenuItem.cpp  MessageBox.cpp  Panel.cpp  PropertySheet.cpp  QueryBox.cpp  RichText.cpp  ScrollBarSlider.cpp  SectionedListPanel.cpp  Slider.cpp  Splitter.cpp  TextEntry.cpp  TextImage.cpp  TreeView.cpp  TreeViewListControl.cpp  vgui2_controls.vcxproj  vgui2_controls.vcxproj.filters
source_sdk/vgui2/controls/Debug/: vgui2_controls.idb
source_sdk/vgui2/controls/Debug/vgui2_controls.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
(+206 files in other folders)
